--- a/src/App.css
+++ b/src/App.css
@@ -2,38 +2,148 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Header */
+
+.App-header {
+  position: relative;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  font-size: 38px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #282c34;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* Main */
 
 .App-main {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: calc(100vh - 70px);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: start;
+  color: rgb(0, 0, 0);
+}
+.container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 25px 0 0 0;
+}
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 500px;
+  font-size: 28px;
+  font-weight: bold;
+}
+.App-main > h2 {
+  font-size: 32px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0 0 0;
+  padding: 12px 18px;
+  min-height: 50px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.task > p {
+  margin: 0 10px 0 0;
+  font-size: 20px;
+  max-width: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.checkbox {
+  margin: 0 10px 0 0;
+}
+
+.strikethrough {
+  text-decoration: line-through;
+}
+
+.taskInput {
+  text-align: center;
+}
+
+/* add btn */
+.add-btn {
+  margin: 10px 0 0 0;
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  line-height: 23px;
+  outline: none;
+  padding: 0.75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.add-btn:hover {
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.add-btn:focus {
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+/* Footer */
+
+.App-footer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #282c34;
+}
+.App-footer > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.App-footer > a > p {
+  margin: 0 5px 0 0;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 375px) {
+  .task {
+    width: 350px;
+    background-color: aqua;
   }
 }
 
